fix(package): remove strict engine requirement

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "redux-ui-router",
-  "version": "0.5.2",
+  "name": "@portfolium-uie/redux-ui-router",
+  "version": "0.5.3",
   "description": "Redux middleware for use with Angular UI Router",
   "main": "./lib/index.js",
   "scripts": {
@@ -37,10 +37,5 @@
   "peerDependencies": {
     "angular": "^1.4.x < 2.0.0",
     "angular-ui-router": "^0.3.0"
-  },
-  "engines" : {
-    "node" : "4.2.1",
-    "npm" : "2.14.7"
   }
-
 }
